tests/snapshots/yaml_suite_snapshots__yaml_suite_52DL_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Explicit Non-Specific Tag [1.3]"
  from: "8MK2, modified for YAML 1.3"
  tags: tag 1.3-mod
  yaml: "---\n! a\n"
  tree: "+STR\n +DOC ---\n  =VAL <!> :a\n -DOC\n-STR\n"
  json: "\"a\"\n"
  dump: "--- ! a\n"
