tests/snapshots/yaml_suite_snapshots__yaml_suite_52DL_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- ! a\n"
  from: "8MK2, modified for YAML 1.3"
  json: "\"a\"\n"
  name: "Explicit Non-Specific Tag [1.3]"
  tags: tag 1.3-mod
  tree: "+STR\n +DOC ---\n  =VAL <!> :a\n -DOC\n-STR\n"
  yaml: "---\n! a\n"
