tests/snapshots/yaml_suite_snapshots__yaml_suite_54T7_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Flow Mapping
  from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/mapping.tml"
  tags: flow mapping
  yaml: "{foo: you, bar: far}\n"
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :foo\n   =VAL :you\n   =VAL :bar\n   =VAL :far\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": \"you\",\n  \"bar\": \"far\"\n}\n"
  dump: "foo: you\nbar: far\n"
