tests/snapshots/yaml_suite_snapshots__yaml_suite_55WF_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid escape in double quoted string
  from: "@perlpunk"
  tags: error double
  fail: true
  yaml: "---\n\"\\.\"\n"
  tree: "+STR\n +DOC ---\n"
