tests/snapshots/yaml_suite_snapshots__yaml_suite_55WF_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid escape in double quoted string
  from: "@perlpunk"
  tags: error double
  fail: true
  yaml: "---\n\"\\.\"\n"
  tree: "+STR\n +DOC ---\n"
