tests/snapshots/yaml_suite_snapshots__yaml_suite_55WF_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid escape in double quoted string
  tags: error double
  tree: "+STR\n +DOC ---\n"
  yaml: "---\n\"\\.\"\n"
