tests/snapshots/yaml_suite_snapshots__yaml_suite_565N_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Construct Binary
  from: "https://github.com/yaml/pyyaml/blob/master/tests/data/construct-binary-py2.data"
  tags: tag unknown-tag
  yaml: "canonical: !!binary \"\\\n R0lGODlhDAAMAIQAAP//9/X17unp5WZmZgAAAOfn515eXvPz7Y6OjuDg4J+fn5\\\n OTk6enp56enmlpaWNjY6Ojo4SEhP/++f/++f/++f/++f/+…"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :canonical\n   =VAL <tag:yaml.org,2002:binary> \"R0lGODlhDAAMAIQAAP//9/X17unp5WZmZgAAAOfn515eXvPz7Y6OjuDg4J+fn5…"
  json: "{\n  \"canonical\": \"R0lGODlhDAAMAIQAAP//9/X17unp5WZmZgAAAOfn515eXvPz7Y6OjuDg4J+fn5OTk6enp56enmlpaWNjY6Ojo4SEhP/++f/++f/++f/++f/++f/++f/++…"
